Fixed extra white space issue in mobile view

--- a/style.css
+++ b/style.css
@@ -6,8 +6,11 @@
     font-family: 'Roboto';
 }
 
+
 body, html {
     height: 100%;
+    width:100%;
+    overflow-x:hidden;
 }
 
 body{
